--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 	<body>
 		<section class="page-header">
 			<h1 class="project-name">Suitup PHP Framework</h1>
-			<h2 class="project-tagline">Framework para projetos web. Pequeno sistema, simples, agilidade e produtividade no
-				projeto.</h2>
+			<h2 class="project-tagline">Para aplicativos PHP legendários</h2>
 			<a href="https://github.com/braghimsistemas/suitup-php" class="btn">View on GitHub</a>
 			<a href="https://github.com/braghimsistemas/suitup-php/zipball/master" class="btn">Download .zip</a>
 			<a href="https://github.com/braghimsistemas/suitup-php/tarball/master" class="btn">Download .tar.gz</a>
