--- a/index.html
+++ b/index.html
@@ -22,15 +22,23 @@
 	</head>
 	<body>
 		<section class="page-header">
-			<h1 class="project-name">SuitUp PHP Framework</h1>
-			<h2 class="project-tagline">Para aplicativos WEB legen... dários!</h2>
-			<a href="https://github.com/braghimsistemas/suitup-php" class="btn">View on GitHub</a>
-			<a href="https://github.com/braghimsistemas/suitup-php/zipball/master" class="btn">Download .zip</a>
-			<a href="https://github.com/braghimsistemas/suitup-php/tarball/master" class="btn">Download .tar.gz</a>
+
+			<div class="col logo">
+				<img src="stylesheets/suitup-logo.png" alt="SuitUp PHP Framework" title="SuitUp PHP Framework" />
+				<h2 class="project-tagline">Para aplicativos WEB legen... dários!</h2>
+
+			</div>
+			<div class="col gh-link">
+				<h1 class="project-name" style="margin-bottom: 50px;">SuitUp PHP Framework</h1>
+				<a href="https://github.com/braghimsistemas/suitup-php" target="_blank" class="btn">View on GitHub</a>
+				<a href="https://github.com/braghimsistemas/suitup-php/zipball/master" class="btn">Download .zip</a>
+				<a href="https://github.com/braghimsistemas/suitup-php/tarball/master" class="btn">Download .tar.gz</a>
+			</div>
+			<div class="clearfix"></div>
 		</section>
 
 		<section class="main-content">
-			<h3>Deixe de sofrer para tornar seu projeto WEB incrível!</h3>
+			<h3>When you code hard, stop to be hard to be <b>awesome</b></h3>
 			<h3>
 				<a href="https://github.com/braghimsistemas/suitup-php/wiki" target="_blank" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 				Instalação
