--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>SuitUp PHP Framework by braghimsistemas</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 
@@ -58,7 +58,7 @@
 		</section>
 
 		<section class="main-content">
-			<h3>When you code hard, stop to be hard to be <b>awesome</b></h3>
+			<h3 style="color: #222222;">When you code hard, stop to be hard to be <b>awesome</b>.</h3>
 			<h3>
 				<a href="https://github.com/braghimsistemas/suitup-php/wiki" target="_blank" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 				Instalação
