Sql Monitor and details about the paginate

--- a/src/resource/query-logger.html
+++ b/src/resource/query-logger.html
@@ -103,6 +103,10 @@
 		font-weight: bold;
 		color: #999;
 	}
+
+  div#__SuitUp-query-log__ .mainbox > p {
+    margin-top: 10px;
+  }
 </style>
 <script type="text/javascript">
 	window.onload = function() {
