Details with sql monitor

--- a/src/resource/query-logger.html
+++ b/src/resource/query-logger.html
@@ -1,3 +1,4 @@
+<!-- SuitUp Sql Monitor - It must not to be shown in production -->
 <style type="text/css">
 	/** Tab ***/
 	div#__SuitUp-query-log-tab__ {
